<resources>
    <string name="app_name">TicTacToe_ChristopherWest</string>
    <string name="game_title">Tic-Tac-Toe</string>
    <string name="game_subtitle">The Game</string>
    <string name="game_option_pvp">Player vs Player</string>
    <string name="game_option_pvc">Player vs Computer</string>
    <string name="game_option_cvc">Computer vs Computer</string>
    <string name="game_option_difficulty_hard">Difficulty: Hard</string>
    <string name="game_option_difficulty_easy">Difficulty: Easy</string>
    <string name="game_option_credits">Credits</string>
    <string name="game_option_3x3">Board Size: 3x3</string>
    <string name="game_option_4x4">Board SIze: 4x4</string>
    <string name="game_winner_player_x">Player X Wins!</string>
    <string name="game_winner_player_o">Player O Wins!</string>
    <string name="game_winner_player_draw">Draw Game!</string>
    <string name="game_option_play_again">Play Again</string>
</resources>
